# urirun-connector-a2a

./: .env.example  .gitignore  README.md  project.sh  pyproject.toml  tree.sh
tests/: test_server.py
urirun_api_a2a/: server.py
